...
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="error_message_address">Enter Address</string>
    <string name="error_message_dob">Enter Date of birth (YYYY-MM-DD)</string>
    <string name="error_message_height">Enter Height</string>
    <string name="error_message_weight">Enter Weight</string>
    <string name="error_message_sex">Enter Sex</string>
    <string name="error_message_phone">Enter Phone Number</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Match</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="already_a_member_login">Already a member? Login</string>
...
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="address">Address</string>
    <string name="date_of_birth">Date of Birth (YYYY-MM-DD)</string>
    <string name="phone">Phone</string>
    <string name="sex">Sex (M or F)</string>
    <string name="calculate_and_complete_profile">Calculate and Complete Profile</string>
    <string name="title_activity_main">Nutrition App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="profile">Profile</string>
    <string name="slideshow">Slideshow</string>
    <string name="today_s_count">Today\'s Count</string>
    <string name="add_food_item">Add Food item</string>
    <string name="remaining">Day Consumption</string>
    <string name="calories">Calories</string>
    <string name="fiber">Fiber</string>
    <string name="proteins">Proteins</string>
    <string name="sugar">Sugar</string>
    <string name="sodium">Sodium (mg)</string>
    <string name="carb">Carbohydrates</string>
    <string name="current_nutrients">Current Consumption per serving</string>
...
